--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon",
     "build": "tsc && npm run copy-sqls",
     "start": "npm run build && node build/index.js",
-    "copy-sqls": "cp -r src/migrate/*.sql build/migrate"
+    "copy-sqls": "cp -r src/migrate/*.sql build/migrate",
+    "test-dev": "nodemon --watch . --ext ts --exec 'mocha --file test/bootstrap.ts -r ts-node/register test/**/*.test.ts'"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
     "@types/mysql": "^2.15.9",
     "@types/node": "^13.9.8",
     "@types/restify": "^8.4.2",
+    "@types/restify-errors": "^4.3.3",
     "@types/restify-plugins": "^1.5.12",
+    "@types/supertest": "^2.0.8",
     "@types/uuid": "^7.0.2",
     "@types/validator": "^12.0.1",
-    "@types/restify-errors": "^4.3.3",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
     "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
