--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,5 +63,9 @@
     /* Advanced Options */
     "resolveJsonModule": true,                /* Include modules imported with '.json' extension */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "test"
+  ]
 }
