--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "nodemon",
     "start": "npm run copy-sqls && ts-node ./src/index.ts",
     "copy-sqls": "cp -r src/migrate/*.sql build/migrate/",
-    "test-dev": "nodemon --watch . --ext ts --exec 'mocha --file test/bootstrap.ts -r ts-node/register test/**/*.test.ts'"
+    "test:dev": "nodemon --watch . --ext ts --exec 'mocha --file test/bootstrap.ts -r ts-node/register test/**/*.test.ts'"
   },
   "author": "",
   "license": "MIT",
@@ -24,6 +24,7 @@
     "@types/validator": "^12.0.1",
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
+    "nock": "^12.0.3",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2",
     "ts-node": "^8.8.1",
